
JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

SCPPublisher:
----------------------
* No longer remove first char from xml log file path, since it now causes errors. Patch by Dan Penhurst

SelfConfiguringPlugin:
----------------------
* Add new SelfConfiguringPlugin interface. Submitted by Jeff Ramsdale

testdetails.xsl:
----------------------
* Escape '<' and '>' in popup window (CC-22). Patch by Jerome Lacoste

TimeBuild:
----------------------
* Add new source control that will trigger a build at a specified time. Submitted by Eric Pugh

VSS(Journal):
----------------------
* Create SimpleDateFormats with Locale.US to fix JUnit build failure on Chinese Windows systems (CC-153 & CC-156)


CruiseControl Release Notes - 2.2.1

AlwaysBuild:
----------------------
* Configurable username for reported Modification

AntBootstrapper:
----------------------
* Submitted by Robert Smith

AntBuilder:
----------------------
* Changed command to run internal ant to use the -lib switch and only include ant-launcher.jar on the classpath.
  This should fix the error where optional tasks couldn't be found by Ant even though they where present on the classpath
* Added useQuiet attribute to call Ant using -quiet, which is mutually exclusive with useDebug
* Corrected documentation for uselogger and usedebug and added docs for usequiet
* Added saveLogDir attribute where a copy of the ant log will be saved. Patch by Jeremy Whitlock

AntBuilderTest:
----------------------
* Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.
  Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x

AntPublisher:
----------------------
* Submitted by Robert Smith

buildresults.xsl:
----------------------
* Added consolidated xsl to make transform more efficent (CC-115). Patch by Alban Peignier with updates by Hack Kampbjorn
